--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -11,7 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [LU decomposition](https://en.wikipedia.org/wiki/LU_decomposition) was introduced by no other than [Alan Turing](https://en.wikipedia.org/wiki/Alan_Turing), in his paper [Rounding-off errors in matrix processes, Q. J. Mechanics Appl. Math. (1948) 1 (1): 287-308. doi: 10.1093/qjmam/1.1.287](http://dx.doi.org/10.1093/qjmam/1.1.287). The LU decomposition is a factorization process that describes a matrix $\\mathbf{A}$ as a product of a unit triangular matrix $\\mathbf{L}$ (i.e., all the entries of its main diagonal are equal to one) and an upper triangular matrix $\\mathbf{U}$. In his paper, Turing showed, among other things, how the Gaussian elimination enshrines the LU decompositon."
+    "The Gaussian elimination enshrines the LU decompositon. The LU decomposition is a factorization process that describes a matrix $\\mathbf{A}$ as a product of a unit triangular matrix $\\mathbf{L}$ (i.e., all the entries of its main diagonal are equal to one) and an upper triangular matrix $\\mathbf{U}$.\n",
+    "\n",
+    "For details, see:\n",
+    "\n",
+    "* Turing, A.M. (1948). \"Rounding-Off Errors in Matrix Processes\". The Quarterly Journal of Mechanics and Applied Mathematics. 1: 287–308. doi: [10.1093/qjmam/1.1.287](https://doi.org/10.1093/qjmam/1.1.287)\n",
+    "\n",
+    "* A. Schwarzenberg-Czerny (1995). \"On matrix factorization and efficient least squares solution\". Astronomy and Astrophysics Supplement. 110: 405-410. Bibliographic Code ADS: [1995A&AS..110..405S](http://adsabs.harvard.edu/abs/1995A%26AS..110..405S)"
    ]
   },
   {
@@ -23,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,11 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.  3. -1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -108,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{M}^{(k)} = \\mathbf{t}^{(k)} \\otimes (\\mathbf{u}^{(k)})^{\\top} \\: ,$$"
+    "$$\\mathbf{M}^{(k)} = \\mathbf{t}^{(k)} \\cdot (\\mathbf{u}^{(k)})^{\\top} \\: ,$$"
    ]
   },
   {
@@ -154,13 +168,13 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\mathbf{M}^{(1)} &= \\mathbf{t}^{(1)} \\otimes (\\mathbf{u}^{(1)})^{\\top}  \\\\\n",
+    "\\mathbf{M}^{(1)} &= \\mathbf{t}^{(1)} \\cdot (\\mathbf{u}^{(1)})^{\\top}  \\\\\n",
     "&= \\left[ \n",
     "\\begin{array}{c}\n",
     "0 \\\\\n",
     "t_{2}^{(1)} \\\\\n",
     "t_{3}^{(1)}\n",
-    "\\end{array} \\right] \\otimes \n",
+    "\\end{array} \\right] \\cdot \n",
     "\\left[ \\begin{array}{ccc}\n",
     "1 & 0 & 0\n",
     "\\end{array} \\right] \\\\\n",
@@ -190,13 +204,13 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\mathbf{M}^{(2)} &= \\mathbf{t}^{(2)} \\otimes (\\mathbf{u}^{(2)})^{\\top}  \\\\\n",
+    "\\mathbf{M}^{(2)} &= \\mathbf{t}^{(2)} \\cdot (\\mathbf{u}^{(2)})^{\\top}  \\\\\n",
     "&= \\left[ \n",
     "\\begin{array}{c}\n",
     "0 \\\\\n",
     "0 \\\\\n",
     "t_{3}^{(2)}\n",
-    "\\end{array} \\right] \\otimes \n",
+    "\\end{array} \\right] \\cdot \n",
     "\\left[ \\begin{array}{ccc}\n",
     "0 & 1 & 0\n",
     "\\end{array} \\right] \\\\\n",
@@ -205,7 +219,7 @@
     "0 & 0 & 0 \\\\\n",
     "0 & t_{3}^{(2)} & 0\n",
     "\\end{array} \\right]\n",
-    "\\end{split} \\: .\n",
+    "\\end{split} \\quad .\n",
     "$$"
    ]
   },
@@ -277,7 +291,7 @@
     "\\begin{split}\n",
     "\\mathbf{Q}^{(-k)} &=\n",
     "\\mathbf{I} + \\mathbf{M}^{(k)} \\\\\n",
-    "&= \\mathbf{I} + \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top}\n",
+    "&= \\mathbf{I} + \\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top}\n",
     "\\end{split} \\: .\n",
     "$$"
    ]
@@ -296,17 +310,17 @@
     "$$\n",
     "\\begin{split}\n",
     "\\mathbf{Q}^{(k)} \\mathbf{Q}^{(-k)}\n",
-    "&= \\left[ \\mathbf{I} - \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\right] \\,\n",
-    "\\left[ \\mathbf{I} + \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\right] \\\\\n",
-    "&= \\mathbf{I} - \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top}\n",
-    "+ \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} -\n",
-    "\\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\, \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\\\\n",
+    "&= \\left[ \\mathbf{I} - \\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\right] \\,\n",
+    "\\left[ \\mathbf{I} + \\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\right] \\\\\n",
+    "&= \\mathbf{I} - \\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top}\n",
+    "+ \\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} -\n",
+    "\\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\, \\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\\\\n",
     "&= \\mathbf{I} - \n",
-    "\\mathbf{t}^{(k)} \\otimes \n",
+    "\\mathbf{t}^{(k)} \\cdot \n",
     "\\underbrace{ \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\mathbf{t}^{(k)} }_{= \\, 0}\n",
-    "\\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\\\\n",
+    "\\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\\\\n",
     "&= \\mathbf{I}\n",
-    "\\end{split} \\: .\n",
+    "\\end{split} \\quad .\n",
     "$$"
    ]
   },
@@ -331,15 +345,15 @@
     "$$\n",
     "\\begin{split}\n",
     "\\mathbf{Q}^{-1}\n",
-    "&= \\left[ \\mathbf{I} + \\mathbf{t}^{(1)} \\otimes \\left( \\mathbf{u}^{(1)} \\right)^{\\top} \\right]\n",
-    "   \\left[ \\mathbf{I} + \\mathbf{t}^{(2)} \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\right] \\\\\n",
-    "&= \\mathbf{I} + \\mathbf{t}^{(1)} \\otimes \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
-    "   \\mathbf{t}^{(2)} \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} + \n",
-    "   \\mathbf{t}^{(1)} \\otimes \n",
+    "&= \\left[ \\mathbf{I} + \\mathbf{t}^{(1)} \\cdot \\left( \\mathbf{u}^{(1)} \\right)^{\\top} \\right]\n",
+    "   \\left[ \\mathbf{I} + \\mathbf{t}^{(2)} \\cdot \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\right] \\\\\n",
+    "&= \\mathbf{I} + \\mathbf{t}^{(1)} \\cdot \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
+    "   \\mathbf{t}^{(2)} \\cdot \\left( \\mathbf{u}^{(2)} \\right)^{\\top} + \n",
+    "   \\mathbf{t}^{(1)} \\cdot \n",
     "   \\underbrace{ \\left( \\mathbf{u}^{(1)} \\right)^{\\top} \\mathbf{t}^{(2)}}_{= \\, 0}\n",
-    "   \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\\\\n",
-    "&= \\mathbf{I} + \\mathbf{t}^{(1)} \\otimes \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
-    "   \\mathbf{t}^{(2)} \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\\\\n",
+    "   \\cdot \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\\\\n",
+    "&= \\mathbf{I} + \\mathbf{t}^{(1)} \\cdot \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
+    "   \\mathbf{t}^{(2)} \\cdot \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\\\\n",
     "&= \n",
     "\\left[ \\begin{array}{ccc}\n",
     "1 & 0 & 0 \\\\\n",
@@ -362,7 +376,7 @@
     "t_{2}^{(1)} & 1 & 0 \\\\\n",
     "t_{3}^{(1)} & t_{3}^{(2)} & 1\n",
     "\\end{array} \\right]\n",
-    "\\end{split} \\: ,\n",
+    "\\end{split} \\quad ,\n",
     "$$"
    ]
   },
@@ -513,114 +527,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, implement the LU decomposition presented above. The code must receive a matrix `A` and return the matrix `C`.\n",
+    "1. In your `my_functions.py` file, create a function called `lu_decomp` for implementing the LU decomposition presented above. The code must receive a matrix `A` and the vector `y` and return the matrix `C`.\n",
     "\n",
-    "2. In your `my_functions.py` file, use the matrix `C` to solve a linear system `Ax = y`. The code must use the function you have created in the item 1, as well as the functions you have created for solving triangular systems.\n",
+    "2. In your `my_functions.py` file, create a function called `lu_solve`. This function must receive the matrix `C` and return the solution vector `x`. Function `lu_solve` must use the functions you have created for solving triangular systems.\n",
     "\n",
-    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A`, compute a matrix `C` by using the function implemented in the item 1, use `C` to create the triangular matrices `L` and `U` and verify the condition `A = LU` is satisfied.\n",
+    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A` and a vector `y`, compute a matrix `C` by using the function `lu_decomp`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `A = LU` is satisfied.\n",
     "\n",
-    "4. In your `test_my_functions.py` file, create a test to compare the solution of the linear system  obtained by the function implemented in item 2 and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import division\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lu(A):\n",
-    "    N = y.size\n",
-    "    C = np.copy(A)\n",
-    "    \n",
-    "    for i in range(N-1):\n",
-    "        \n",
-    "        # assert the pivot is nonzero\n",
-    "        assert C[i,i] != 0., 'null pivot!'\n",
-    "        \n",
-    "        # calculate the Gauss multipliers and store them \n",
-    "        # in the lower part of C\n",
-    "        C[i+1:,i] = C[i+1:,i]/C[i,i]\n",
-    "        \n",
-    "        # zeroing of the elements in the ith column\n",
-    "        C[i+1:,i+1:] = C[i+1:,i+1:] - np.outer(C[i+1:,i], C[i,i+1:])\n",
-    "        \n",
-    "    return C"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.array([[2.,1.,-1.],\n",
-    "              [-3.,-1.,2.],\n",
-    "              [-2.,1.,2.]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = np.array([8., -11., -3.])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C = lu(A)"
+    "4. In your `test_my_functions.py` file, create two aditional tests. One test must compare the solution of the linear system obtained by `lu_solve` and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html). The second test must create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `lu_solve` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.   1.  -1. ]\n",
-      " [-1.5  0.5  0.5]\n",
-      " [-1.   4.  -1. ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print C"
+    "P, L, U = lu(A)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "L = np.tril(C, k=-1) + np.identity(3)"
+    "print(P)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.          0.          0.        ]\n",
+      " [ 0.66666667  1.          0.        ]\n",
+      " [-0.66666667  0.2         1.        ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "U = np.triu(C)"
+    "print(L)"
    ]
   },
   {
@@ -629,85 +589,37 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.         -1.          2.        ]\n",
+      " [ 0.          1.66666667  0.66666667]\n",
+      " [ 0.          0.          0.2       ]]\n"
+     ]
     }
    ],
    "source": [
-    "np.allclose(A, np.dot(L, U))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2.,  1., -1.],\n",
-       "       [-3., -1.,  2.],\n",
-       "       [-2.,  1.,  2.]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.dot(L, U)"
+    "print(U)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "w = np.linalg.solve(L, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.linalg.solve(U, w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_calc = np.dot(A, x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print y_calc"
+    "np.allclose(np.dot(P.T, A), np.dot(L, U))"
    ]
   },
   {
