--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -116,7 +116,12 @@
    "source": [
     "$$\n",
     "\\tilde{\\mathbf{Q}}^{(k)} = \n",
-    "\\tilde{\\mathbf{P}}^{(k)} \\, \\left( \\mathbf{I} - \\mathbf{M}^{(k)} \\right) \\, \\tilde{\\mathbf{P}}^{(-k)} \\: ,\n",
+    "\\begin{cases}\n",
+    "\\tilde{\\mathbf{P}}^{(k)} \\,\n",
+    "\\left( \\mathbf{I} - \\mathbf{M}^{(k)} \\right) \\,\n",
+    "\\tilde{\\mathbf{P}}^{(-k)} \\: &, \\quad k < N - 1 \\\\\n",
+    "\\left( \\mathbf{I} - \\mathbf{M}^{(k)} \\right) \\: &, \\quad k = N - 1\n",
+    "\\end{cases}\n",
     "$$"
    ]
   },
@@ -146,9 +151,13 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\tilde{\\mathbf{Q}}^{(-k)} = \\tilde{\\mathbf{P}}^{(k)} \\,\n",
+    "\\tilde{\\mathbf{Q}}^{(-k)} = \n",
+    "\\begin{cases}\n",
+    "\\tilde{\\mathbf{P}}^{(k)} \\,\n",
     "\\left( \\mathbf{I} + \\mathbf{M}^{(k)} \\right) \\,\n",
-    "\\tilde{\\mathbf{P}}^{(-k)} \\: .\n",
+    "\\tilde{\\mathbf{P}}^{(-k)} \\: &, \\quad k < N - 1 \\\\\n",
+    "\\left( \\mathbf{I} + \\mathbf{M}^{(k)} \\right) \\: &, \\quad k = N - 1\n",
+    "\\end{cases}\n",
     "$$"
    ]
   },
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,12 +200,12 @@
     }
    ],
    "source": [
-    "print p"
+    "print(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,24 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5 2 0 8 7 4 3 1 9 6]\n"
+      "[5 0 3 6 4 7 8 1 2 9]\n"
      ]
     }
    ],
    "source": [
-    "print p"
+    "print(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,33 +240,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.  0.  0.  0.  0.  1.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  1.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 1.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  1.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  1.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  1.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  1.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  1.  0.  0.  0.]]\n"
+      "[[0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n"
      ]
     }
    ],
    "source": [
-    "print P"
+    "print(P)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +275,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +304,7 @@
     "\\, \\mathbf{M}^{(k)} \\,\n",
     "\\tilde{\\mathbf{P}}^{(k)} \\\\\n",
     "&= \\mathbf{I} + \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
-    "\\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\,\n",
+    "\\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\,\n",
     "\\tilde{\\mathbf{P}}^{(k)}\n",
     "\\end{split} \\: .\n",
     "$$"
@@ -313,7 +322,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\tilde{\\mathbf{Q}}^{(-k)} = \\mathbf{I} + \\tilde{\\mathbf{t}}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\: .\n",
+    "\\tilde{\\mathbf{Q}}^{(-k)} = \\mathbf{I} + \\tilde{\\mathbf{t}}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\: .\n",
     "$$"
    ]
   },
@@ -331,15 +340,15 @@
     "$$\n",
     "\\begin{split}\n",
     "\\tilde{\\mathbf{Q}}^{-1}\n",
-    "&= \\left[ \\mathbf{I} + \\tilde{\\mathbf{t}}^{(1)} \\otimes \\left( \\mathbf{u}^{(1)} \\right)^{\\top} \\right]\n",
-    "   \\left[ \\mathbf{I} + \\tilde{\\mathbf{t}}^{(2)} \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\right] \\\\\n",
-    "&= \\mathbf{I} + \\tilde{\\mathbf{t}}^{(1)} \\otimes \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
-    "   \\tilde{\\mathbf{t}}^{(2)} \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} + \n",
-    "   \\tilde{\\mathbf{t}}^{(1)} \\otimes \n",
+    "&= \\left[ \\mathbf{I} + \\tilde{\\mathbf{t}}^{(1)} \\cdot \\left( \\mathbf{u}^{(1)} \\right)^{\\top} \\right]\n",
+    "   \\left[ \\mathbf{I} + \\tilde{\\mathbf{t}}^{(2)} \\cdot \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\right] \\\\\n",
+    "&= \\mathbf{I} + \\tilde{\\mathbf{t}}^{(1)} \\cdot \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
+    "   \\tilde{\\mathbf{t}}^{(2)} \\cdot \\left( \\mathbf{u}^{(2)} \\right)^{\\top} + \n",
+    "   \\tilde{\\mathbf{t}}^{(1)} \\cdot \n",
     "   \\underbrace{ \\left( \\mathbf{u}^{(1)} \\right)^{\\top} \\tilde{\\mathbf{t}}^{(2)}}_{= \\, 0}\n",
-    "   \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\\\\n",
-    "&= \\mathbf{I} + \\tilde{\\mathbf{t}}^{(1)} \\otimes \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
-    "   \\tilde{\\mathbf{t}}^{(2)} \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\\\\n",
+    "   \\cdot \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\\\\n",
+    "&= \\mathbf{I} + \\tilde{\\mathbf{t}}^{(1)} \\cdot \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
+    "   \\tilde{\\mathbf{t}}^{(2)} \\cdot \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\\\\n",
     "&= \n",
     "\\left[ \\begin{array}{ccc}\n",
     "1 & 0 & 0 \\\\\n",
@@ -529,24 +538,18 @@
    "source": [
     "### Exercise\n",
     "\n",
-    "In your `my_functions.py` file:\n",
+    "1. In your `my_functions.py` file, create a function called `lu_decomp_pivot` for implementing the LU decomposition presented above. The code must receive a matrix `A` and the vector `y` and return the matrices `C` and `P`.\n",
     "\n",
-    "1) Implement the LU decomposition with partial pivoting presented above. The code must receive a matrix `A` and return the matrices `C` and `P`.\n",
+    "2. In your `my_functions.py` file, create a function called `lu_solve_pivot`. This function must receive the matrices `C` and `P` and return the solution vector `x`. Function `lu_solve_pivot` must use the functions you have created for solving triangular systems.\n",
     "\n",
-    "2) Use the matrices `C` and `P` to solve a linear system `Ax = y`. The code must use the function you have created in the item 1, as well as the functions you have created for solving triangular systems.\n",
+    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A` and a vector `y`, compute a matrices `C` and `P ` by using the function `lu_decomp_pivot`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `PA = LU` is satisfied.\n",
     "\n",
-    "3) Create a test that defines a square matrix `A`, compute the matrices `C` and `P` by using the function implemented in the item 1, use `C` to create the triangular matrices `L` and `U` and verify the condition `PA = LU` is satisfied.\n",
-    "\n",
-    "In your `test_my_functions.py` file:\n",
-    "\n",
-    "4) Create a test to compare the solution of the linear system  obtained by the function implemented in item 2 and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html).\n",
-    "\n",
-    "5) Create a test to compare the matrices `P`, `L`, `U` obtainted by using your function with the matrices `P`, `L`, `U` obtainted by using the function [`scipy.linalg.lu`](http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.linalg.lu.html). Be careful! The matrix `P` calculated by the routine `scipy.linalg.lu` is equal to the transpose of the matrix `P` calculated by the algorithm presented here."
+    "4. In your `test_my_functions.py` file, create two aditional tests. One test must compare the matrices `P`, `L`, `U` obtainted by using your function `lu_decomp_pivot` with the matrices `P`, `L`, `U` obtainted by using the function [`scipy.linalg.lu`](http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.linalg.lu.html). Be careful! The matrix `P` calculated by the routine `scipy.linalg.lu` is equal to the transpose of the matrix `P` calculated by the algorithm presented here. The second test must create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `lu_solve_pivot` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -583,13 +586,13 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.allclose(A, np.dot(P_sp, np.dot(L_sp,U_sp)))"
+    "np.allclose(np.dot(P_sp.T, A), np.dot(L_sp,U_sp))"
    ]
   },
   {
@@ -602,21 +605,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
