LU decomposition without partial pivoting

--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -527,11 +527,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create a function called `lu_decomp` for implementing the LU decomposition presented above. The code must receive a matrix `A` and the vector `y` and return the matrix `C`.\n",
+    "1. In your `my_functions.py` file, create a function called `lu_decomp` for implementing the LU decomposition presented above. The code must receive a matrix `A` and return the matrix `C`.\n",
     "\n",
-    "2. In your `my_functions.py` file, create a function called `lu_solve`. This function must receive the matrix `C` and return the solution vector `x`. Function `lu_solve` must use the functions you have created for solving triangular systems.\n",
+    "2. In your `my_functions.py` file, create a function called `lu_solve`. This function must receive the matrix `C` and a vector `y` and return the solution vector `x`. Function `lu_solve` must use the functions you have created for solving triangular systems.\n",
     "\n",
-    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A` and a vector `y`, compute a matrix `C` by using the function `lu_decomp`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `A = LU` is satisfied.\n",
+    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A`, compute a matrix `C` by using the function `lu_decomp`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `A = LU` is satisfied.\n",
     "\n",
     "4. In your `test_my_functions.py` file, create two aditional tests. One test must compare the solution of the linear system obtained by `lu_solve` and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html). The second test must create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `lu_solve` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
    ]
