--- a/Content/gauss-elim-intro.ipynb
+++ b/Content/gauss-elim-intro.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
     }
    ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -255,23 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.  1.  0.]\n",
-      " [ 1.  0.  0.]\n",
-      " [ 0.  0.  1.]]\n"
+      "[[0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]]\n"
      ]
     }
    ],
    "source": [
     "T = np.identity(3)[[1, 0, 2]]\n",
     "\n",
-    "print T"
+    "print(T)"
    ]
   },
   {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,50 +293,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.  3.  2.]\n",
-      " [ 7.  4.  9.]\n",
-      " [ 8.  6.  5.]]\n",
+      "[[1. 3. 2.]\n",
+      " [7. 4. 9.]\n",
+      " [8. 6. 5.]]\n",
       "\n",
       "\n",
-      "[[ 7.  4.  9.]\n",
-      " [ 1.  3.  2.]\n",
-      " [ 8.  6.  5.]]\n"
+      "[[7. 4. 9.]\n",
+      " [1. 3. 2.]\n",
+      " [8. 6. 5.]]\n"
      ]
     }
    ],
    "source": [
-    "print A\n",
-    "print '\\n'\n",
-    "print A_prime"
+    "print(A)\n",
+    "print('\\n')\n",
+    "print(A_prime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5.23  6.45  1.67]\n",
+      "[5.23 6.45 1.67]\n",
       "\n",
       "\n",
-      "[ 6.45  5.23  1.67]\n"
+      "[6.45 5.23 1.67]\n"
      ]
     }
    ],
    "source": [
-    "print y\n",
-    "print '\\n'\n",
-    "print y_prime"
+    "print(y)\n",
+    "print('\\n')\n",
+    "print(y_prime)"
    ]
   },
   {
@@ -348,46 +348,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 7.  4.  9.]\n",
-      " [ 1.  3.  2.]\n",
-      " [ 8.  6.  5.]]\n",
+      "[[7. 4. 9.]\n",
+      " [1. 3. 2.]\n",
+      " [8. 6. 5.]]\n",
       "\n",
       "\n",
-      "[[ 7.  4.  9.]\n",
-      " [ 1.  3.  2.]\n",
-      " [ 8.  6.  5.]]\n"
+      "[[7. 4. 9.]\n",
+      " [1. 3. 2.]\n",
+      " [8. 6. 5.]]\n"
      ]
     }
    ],
    "source": [
-    "print A_prime\n",
-    "print '\\n'\n",
-    "print A[[1, 0, 2]]"
+    "print(A_prime)\n",
+    "print('\\n')\n",
+    "print(A[[1, 0, 2]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 6.45  5.23  1.67]\n",
-      "\n",
-      "\n",
-      "[ 6.45  5.23  1.67]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print y_prime\n",
     "print '\\n'\n",
@@ -403,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +413,7 @@
     }
    ],
    "source": [
-    "print x1"
+    "print(x1)"
    ]
   },
   {
@@ -436,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +437,7 @@
     }
    ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -476,19 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  0.  0.]\n",
-      " [ 0.  3.  0.]\n",
-      " [ 0.  0.  1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "T = np.diag([1., 3., 1.])\n",
     "\n",
@@ -504,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,24 +493,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  3.  2.]\n",
-      " [ 7.  4.  9.]\n",
-      " [ 8.  6.  5.]]\n",
-      "\n",
-      "\n",
-      "[[  1.   3.   2.]\n",
-      " [ 21.  12.  27.]\n",
-      " [  8.   6.   5.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print A\n",
     "print '\\n'\n",
@@ -540,20 +504,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5.23  6.45  1.67]\n",
-      "\n",
-      "\n",
-      "[  5.23  19.35   1.67]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print y\n",
     "print '\\n'\n",
@@ -569,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,17 +531,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.70556701  1.34958763  1.44340206]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print x2"
    ]
@@ -602,17 +547,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.70556701  1.34958763  1.44340206]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print x"
    ]
@@ -676,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,19 +624,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  0.  0.]\n",
-      " [ 0.  1.  0.]\n",
-      " [ 3.  0.  1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "T = np.identity(3) + np.outer(t, u)\n",
     "\n",
@@ -715,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,24 +652,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.  3.  2.]\n",
-      " [ 7.  4.  9.]\n",
-      " [ 8.  6.  5.]]\n",
-      "\n",
-      "\n",
-      "[[  1.   3.   2.]\n",
-      " [  7.   4.   9.]\n",
-      " [ 11.  15.  11.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print A\n",
     "print '\\n'\n",
@@ -751,20 +663,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5.23  6.45  1.67]\n",
-      "\n",
-      "\n",
-      "[  5.23   6.45  17.36]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print y\n",
     "print '\\n'\n",
@@ -780,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,17 +690,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.70556701  1.34958763  1.44340206]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print x3"
    ]
@@ -813,17 +706,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.70556701  1.34958763  1.44340206]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print x"
    ]
@@ -837,68 +722,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.70556701  1.34958763  1.44340206]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.70556701  1.34958763  1.44340206]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print x1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.70556701  1.34958763  1.44340206]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print x2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.70556701  1.34958763  1.44340206]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print x3"
    ]
