LU with partial pivoting, LDLt and Cholesky

--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider a $N \\times N$ matrix $\\mathbf{A}$ that is symmetric and [positive definite](http://mathworld.wolfram.com/PositiveDefiniteMatrix.html). Then, it satisfies the following equations:"
+    "Consider an $N \\times N$ matrix $\\mathbf{A}$ that is symmetric and [positive definite](http://mathworld.wolfram.com/PositiveDefiniteMatrix.html). Then, it satisfies the following equations:"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "source": [
     "## Computing inverses by using the Cholesky decomposition\n",
     "\n",
-    "As we have learned in a previous class, each column of the inverse of a matrix can be computed by solving a linear system. It means that computing the inverse of an $N \\times N$ matrix requires the solution of $N$ linear systems. Note that, by using the Gaussian elimination (with or without partial pivoting), we need to compute and solve one equivalent triangular system for each one of the $N$ columns of the inverse matrix. If the matrix is symmetric, we may use the Cholesky decomposition to compute its inverse. In this case, we need to compute the matrix $\\mathbf{G}$ just once and use it to solve the $N$ required linear systems, each one for a different column of the inverse."
+    "As we have learned in a previous class, each column of the inverse of a matrix can be computed by solving a linear system. It means that computing the inverse of an $N \\times N$ matrix requires the solution of $N$ linear systems. Note that, by using the Gaussian elimination (with or without partial pivoting), we need to compute and solve one equivalent triangular system for each one of the $N$ columns of the inverse matrix. If the matrix is symmetric and positive definite, we may use the Cholesky decomposition to compute its inverse. In this case, we need to compute the matrix $\\mathbf{G}$ just once and use it to solve the $N$ required linear systems, each one for a different column of the inverse."
    ]
   },
   {
@@ -257,20 +257,27 @@
    "source": [
     "In your `my_functions.py` file:\n",
     "\n",
-    "1) Implement the algorithm presented above for calculating the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive a symmetric matrix `A` and return the matrix `G`.\n",
+    "1) Create a function called `cho_decomp` for computing the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive `A` and return the matrix `G`.\n",
     "\n",
-    "2) Create a function to solve a linear system by using the calculated `G`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "2) Create a function called `cho_solve` to solve a linear system by using the calculated `G`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
     "\n",
-    "3) Create a function to compute the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the Cholesky decomposition.\n",
+    "3) Create a function called `matsymposdef_inverse` to compute the inverse of a symmetric positive definite matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `cho_decomp` and `cho_solve`.\n",
     "\n",
     "In your `test_my_functions.py` file:\n",
     "\n",
-    "4) Use the function implemented in item 1 to verify if $\\mathbf{A} = \\mathbf{G}\\mathbf{G}^{\\top}$.\n",
+    "4) Use the function `cho_decomp` to verify if $\\mathbf{A} = \\mathbf{G}\\mathbf{G}^{\\top}$.\n",
     "\n",
-    "5) Compare the solution obtained by using the function implemented in 2 with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)\n",
+    "5) Compare the solution obtained by using the function `cho_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)\n",
     "\n",
-    "6) Use the function implemented in item 3 to compute the inverse matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
+    "6) Use the function `matsymposdef_inverse` to compute the inverse of a symmetric positive definite matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
