--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -297,15 +297,16 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\tilde{\\mathbf{Q}}^{(-k)} &= \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
+    "\\tilde{\\mathbf{Q}}^{(-k)} \n",
+    "&= \\tilde{\\mathbf{P}}^{(k)} \\,\n",
     "\\left( \\mathbf{I} + \\mathbf{M}^{(k)} \\right) \\,\n",
-    "\\tilde{\\mathbf{P}}^{(k)} \\\\\n",
-    "&= \\mathbf{I} + \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
+    "\\tilde{\\mathbf{P}}^{(-k)} \\\\\n",
+    "&= \\mathbf{I} + \\tilde{\\mathbf{P}}^{(k)} \\,\n",
     "\\, \\mathbf{M}^{(k)} \\,\n",
-    "\\tilde{\\mathbf{P}}^{(k)} \\\\\n",
-    "&= \\mathbf{I} + \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
+    "\\tilde{\\mathbf{P}}^{(-k)} \\\\\n",
+    "&= \\mathbf{I} + \\tilde{\\mathbf{P}}^{(k)} \\,\n",
     "\\mathbf{t}^{(k)} \\cdot \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\,\n",
-    "\\tilde{\\mathbf{P}}^{(k)}\n",
+    "\\tilde{\\mathbf{P}}^{(-k)}\n",
     "\\end{split} \\: .\n",
     "$$"
    ]
@@ -314,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the matrix $\\tilde{\\mathbf{P}}^{(-k)}$ swaps the elements $\\left[ \\, k+1 \\, : \\, \\right]$ of $\\mathbf{t}^{(k)}$, resulting in a new vector $\\tilde{\\mathbf{t}}^{(k)} = \\tilde{\\mathbf{P}}^{(-k)} \\, \\mathbf{t}^{(k)}$. Similarly, the matrix $\\tilde{\\mathbf{P}}^{(k)}$ swaps the elements $\\left[ \\, k+1 \\, : \\, \\right]$ of $\\left( \\mathbf{u}^{(k)} \\right)^{\\top}$ and, consequently, $\\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\, \\tilde{\\mathbf{P}}^{(k)} = \\left( \\mathbf{u}^{(k)} \\right)^{\\top}$. Then, the matrix $\\tilde{\\mathbf{Q}}^{(-k)}$ can be rewritten as follows:"
+    "Notice that the matrix $\\tilde{\\mathbf{P}}^{(k)}$ swaps the elements $\\left[ \\, k+1 \\, : \\, \\right]$ of $\\mathbf{t}^{(k)}$, resulting in a new vector $\\tilde{\\mathbf{t}}^{(k)} = \\tilde{\\mathbf{P}}^{(k)} \\, \\mathbf{t}^{(k)}$. Similarly, the matrix $\\tilde{\\mathbf{P}}^{(-k)}$ swaps the elements $\\left[ \\, k+1 \\, : \\, \\right]$ of $\\left( \\mathbf{u}^{(k)} \\right)^{\\top}$ and, consequently, $\\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\, \\tilde{\\mathbf{P}}^{(-k)} = \\left( \\mathbf{u}^{(k)} \\right)^{\\top}$. Then, the matrix $\\tilde{\\mathbf{Q}}^{(-k)}$ can be rewritten as follows:"
    ]
   },
   {
@@ -379,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which is a unit **L**ower triangular matrix containing the permuted Gauss multipliers. Notice that this matrix $\\tilde{\\mathbf{Q}}^{-1}$ differs from that one presented in the previous class because the Gauss multipliers are permuted. Similarly to the previous class, the **U**pper triangular matrix $\\mathbf{A}^{(2)}$ is defined as $\\mathbf{U}$ and the original matrix $\\mathbf{A}$ is factored as follows:"
+    "which is a unit **Lower** triangular matrix containing the permuted Gauss multipliers. Notice that this matrix $\\tilde{\\mathbf{Q}}^{-1}$ differs from that one presented in the previous class because the Gauss multipliers are permuted. Similarly to the previous class, the **Upper** triangular matrix $\\mathbf{A}^{(2)}$ is defined as $\\mathbf{U}$ and the original matrix $\\mathbf{A}$ is factored as follows:"
    ]
   },
   {
