define the input of functions ldlt_solve and cho_solve

--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -438,7 +438,7 @@
     "\n",
     "1) Create a function called `ldlt_decomp` for computing the matrices `L` and `D` from a symmetric matrix `A`. The function must receive a symmetric matrix `A` and return a lower triangular matrix `L` and an 1D array `d` with the diagonal elements of the matrix `D`.\n",
     "\n",
-    "2) Create a function called `ldlt_solve` to solve a linear system by using the calculated `L` and `d`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "2) Create a function called `ldlt_solve` to solve a linear system by using the calculated `L` and `d`. The function must receive `L`, `d` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
     "\n",
     "3) Create a function called `matsym_inverse` to compute the inverse of a symmetric matrix. The code must receive a symmetric matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `ldlt_decomp` and `ldlt_solve`.\n",
     "\n",
