--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -527,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create a function called `lu_decomp` for implementing the LU decomposition presented above. The code must receive a matrix `A` and return the matrix `C`.\n",
+    "1. In your `my_functions.py` file, create a function called `lu_decomp` for implementing the LU decomposition presented above. The code must receive a matrix `A` and return the matrix `C` containing the matrices `L` (without the main diagonal) and `U`.\n",
     "\n",
     "2. In your `my_functions.py` file, create a function called `lu_solve`. This function must receive the matrix `C` and a vector `y` and return the solution vector `x`. Function `lu_solve` must use the functions you have created for solving triangular systems.\n",
     "\n",
