--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -259,7 +259,7 @@
     "\n",
     "1) Create a function called `cho_decomp` for computing the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive `A` and return the matrix `G`.\n",
     "\n",
-    "2) Create a function called `cho_solve` to solve a linear system by using the calculated `G`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "2) Create a function called `cho_solve` to solve a linear system by using the calculated `G`. The function must receive `G` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
     "\n",
     "3) Create a function called `matsymposdef_inverse` to compute the inverse of a symmetric positive definite matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `cho_decomp` and `cho_solve`.\n",
     "\n",
